Added new actions to the post controller. Added views for creating a post. Added a form partial for that. Added a view for viewing a single post and then added link_to edit, link_to delete and link_to home at the bottom of the show post page.  Also changed the post#index page to display all posts and added a link_to create a post from the home page.  Added the edit post view.  Added a private method for post_params and another for determining which post is currently being viewed.  Coupling that with a before_action simplifies the rest of the post controller file.

--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,1 +1,3 @@
-%h1 Just a placeholder
+-@posts.each do |post|
+%h2= link_to post.title, post
+= link_to "Share something interesting", new_post_path
